Superhero Form with Sinatra Complete

--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,3 +1,16 @@
+<h1><%=@team.name%></h1>
 
 
+<h2>Team Motto: <%=@team.motto%></h2>
 
+<h2>Hero Name: <%=@heros[0].name%></h2>
+<h3>Hero Power: <%=@heros[0].power%></h3>
+<h3>Hero Biography: <%=@heros[0].bio%></h3>
+
+<h2>Hero Name: <%=@heros[1].name%></h2>
+<h3>Hero Power: <%=@heros[1].power%></h3>
+<h3>Hero Biography: <%=@heros[1].bio%></h3>
+
+<h2>Hero Name: <%=@heros[2].name%></h2>
+<h3>Hero Power: <%=@heros[2].power%></h3>
+<h3>Hero Biography: <%=@heros[2].bio%></h3>
